force-app/main/default/objects/Twilio_SMS__c/Twilio_SMS__c.object-meta.xml
<CustomObject>
    <label>Twilio SMS</label>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>