force-app/main/default/objects/Twilio_SMS__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>