force-app/main/default/objects/Twilio_SMS__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>