force-app/main/default/objects/Twilio_SMS__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>