force-app/main/default/objects/Twilio_SMS__c/fields/Message_SID__c.field-meta.xml
<CustomField>
    <fullName>Message_SID__c</fullName>
    <label>Message SID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>