force-app/main/default/objects/Twilio_SMS__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>