force-app/main/default/objects/Twilio_SMS__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Queued</fullName><default>true</default><label>Queued</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>